--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omegle_webrtc",
+  "name": "video_chat_webrtc",
   "version": "1.0.0",
   "description": "A webrtc video conference and text chat website.",
   "main": "index.js",
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": ""
+  "license": "",
+  "dependencies": {
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2"
+  }
 }
