--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "video_chat_webrtc",
   "version": "1.0.0",
   "description": "A webrtc video conference and text chat website.",
-  "main": "index.js",
+  "main": "src/server/app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon src/server/server.ts",
+    "client": "tsc --watch",
+    "build": "tsc"
   },
   "author": "",
   "license": "",
@@ -12,6 +15,12 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
